--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -38,7 +38,6 @@ html {
   align-items: center;
 }
 body {
-  /* position: relative; */
   padding-left: 30px;
   padding-right: 30px;
   padding-top: 34px;
@@ -52,4 +51,16 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1;
+}
+
+#account-bar-chart > div:first-child {
+  border-top-left-radius: calc(infinity * 1px);
+  border-bottom-left-radius: calc(infinity * 1px);
+}
+#account-bar-chart > div:last-child {
+  border-top-right-radius: calc(infinity * 1px);
+  border-bottom-right-radius: calc(infinity * 1px);
+}
+#account-bar-chart > div:only-child {
+  border-radius: calc(infinity * 1px);
 }
