--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -36,6 +36,7 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: var(--background);
 }
 body {
   padding-left: 30px;
