changed ui green color

--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -15,7 +15,7 @@
   --primary-500: #000000;
 
   --primary-red: #ef4444;
-  --primary-green: #56ca00;
+  --primary-green: #22c55e;
 
   --house-category-color: #ff3b3b;
   --house-category-bg: rgba(255, 59, 59, 0.25);
